[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/match_3_game/grid.gd" type="Script" id=1]

[node name="grid" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.886275, 0.529412, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.26
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="pieces_parent" type="Node2D" parent="."]
[connection signal="timeout" from="destroy_timer" to="." method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="." method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refill_timer" to="." method="_on_refill_timer_timeout"]
